--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
 <body>
   <style>
     body {
-    background-image: url("/whale.jpg");
+    background-image: url("whale.jpg");
     background-size: 100%;
     background-origin: content;
     background-repeat: no-repeat;
