--- a/test.html
+++ b/test.html
@@ -4,12 +4,7 @@
 	</head>
 <body>
   <style>
-    body {
-    background-image: url("whale.jpg");
-    background-size: 100%;
-    background-origin: content;
-    background-repeat: no-repeat;
-    }
+	<img src='whale.jpg'/>
   </style>
   <h1> Whale is a bicha </h1>
 </body>
