--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 	</head>
 <body>
   <style>
-	<img src='whale.jpg'/>
+	<img src='https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fi.imgur.com%2Fk94cpoR.jpg&f=1&nofb=1'/>
   </style>
   <h1> Whale is a bicha </h1>
 </body>
