--- a/load.html
+++ b/load.html
@@ -3,6 +3,6 @@
 	   <title>Background-Image Test</title>
 	</head>
 <body>
-		<img src='https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fi.imgur.com%2Fk94cpoR.jpg&f=1&nofb=1'/>
+		<img src='whale.jpg'/>
 </body>
 </html>
