--- a/foosey.html
+++ b/foosey.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript">
 		function GameDetails( servername, serverurl, mapname, maxplayers, steamid, gamemode, volume, lang)
 		{
+			$("#spambox").append("foobar" + "<br>");
 			$("#spambox").append("SteamID: " + steamid + "<br>");
 		}
 	</script>
