--- a/whall.html
+++ b/whall.html
@@ -8,14 +8,13 @@
 	</head>
 <body>
 	<!-- <img src='whale.jpg' height="100%" width="100%"/> -->
-	<div id='spambox'></div>
+	<h1 id='spambox'></div>
 	<script type="text/javascript">
-		$("#spambox").append("foo");
-		document.getElementById("spambox").innerHTML = "bar<br>";
 		function GameDetails( servername, serverurl, mapname, maxplayers, steamid, gamemode, volume, lang)
 		{
-			$("#spambox").append("foobar" + "<br>");
 			$("#spambox").append("SteamID: " + steamid + "<br>");
+			$("#spambox").append("Mapname: " + mapname + "<br>");
+			$("#spambox").append("Gamemode: " + gamemode + "<br>);
 		}
 	</script>
 </body>
