--- a/whalle.html
+++ b/whalle.html
@@ -8,7 +8,7 @@
 	</head>
 <body>
 	<!-- <img src='whale.jpg' height="100%" width="100%"/> -->
-	<h1 id='spambox'></div>
+	<h1 id='spambox'></h1>
 	<script type="text/javascript">
 		function GameDetails( servername, serverurl, mapname, maxplayers, steamid, gamemode, volume, lang)
 		{
