Update and rename whalle.html to whallek.html

--- a/whallek.html
+++ b/whallek.html
@@ -14,7 +14,7 @@
 		{
 			$("#spambox").append("SteamID: " + steamid + "<br>");
 			$("#spambox").append("Mapname: " + mapname + "<br>");
-			$("#spambox").append("Gamemode: " + gamemode + "<br>);
+			$("#spambox").append("Gamemode: " + gamemode + "<br>");
 		}
 	</script>
 </body>
